[package]
name = "uniter"
version = "0.1.0"
edition = "2024"

[dependencies]
inquire = "0.7.5"
regex = "1.11.1"
reqwest = { version = "0.12.15", features = ["json", "blocking"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
ureq = { version = "3.0.11", features = ["json"] }
